--- a/WebApplication1/Views/Home/Quiz.cshtml
+++ b/WebApplication1/Views/Home/Quiz.cshtml
@@ -1,15 +1,36 @@
-﻿@{
+﻿@model WebApplication1.Models.UserAnswer
+@{
     Layout = null;
 }
-
 <!DOCTYPE html>
 <html>
 <head>
+    <meta name="abstract" content="width=device-width"/>
     <title>Quiz</title>
 </head>
 <body>
     <div>
         <h1>#QUIZ Page</h1>
+    </div>
+    <div>
+        <form asp-action="Quiz" method="post">
+            <p>
+                <label asp-for="Name">Your Name: </label>
+                <input asp-for="Name"/>
+            </p>
+            <p>
+                <label>What's polymorphism in OOP?</label>
+                <select asp-for="Points">
+                    <option value=1>Polymorphism is the ability of an object to take on many forms.     </option>
+                    <option value=0>Polymorphism is an object-oriented programming concept that binds 
+                                    together the data and functions that manipulate the data.           </option>
+                    <option value=0>Polymorphism is  the mechanism of basing an object or class upon 
+                                    another object (prototype-based inheritance) or class (class-based 
+                                    inheritance), retaining similar implementation.                     </option>
+                </select>
+            </p>
+            <button type="submit">Submit quiz</button>
+        </form>
     </div>
 </body>
 </html>
