Add model validation

--- a/WebApplication1/Views/Home/Quiz.cshtml
+++ b/WebApplication1/Views/Home/Quiz.cshtml
@@ -12,7 +12,7 @@
     <div>
         <h1>#QUIZ Page</h1>
     </div>
-    <div>
+    <div asp-validation-summary="All">
         <form asp-action="Quiz" method="post">
             <p>
                 <label asp-for="Name">Your Name: </label>
