--- a/WebApplication1/Views/Home/Quiz.cshtml
+++ b/WebApplication1/Views/Home/Quiz.cshtml
@@ -5,8 +5,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta name="abstract" content="width=device-width"/>
+    <meta name="abstract" content="width=device-width" />
     <title>Quiz</title>
+    <link rel="stylesheet" href="/css/Style.css" />
 </head>
 <body>
     <div>
