--- a/WebApplication1/Views/Home/Start.cshtml
+++ b/WebApplication1/Views/Home/Start.cshtml
@@ -4,12 +4,14 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta name="abstract" content="width=device-width" />
     <title>Web application</title>
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
 </head>
 <body>
-    <div>
+    <div class="text-sm-center">
         <h1>Want to take the quiz?</h1>
-        <a asp-action="Quiz">#QUIZ</a>
+        <a asp-action="Quiz">Take the #QUIZ</a>
     </div>
 </body>
 </html>
