Change table style using Bootstrap

--- a/WebApplication1/Views/Home/ResultTable.cshtml
+++ b/WebApplication1/Views/Home/ResultTable.cshtml
@@ -11,9 +11,9 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
 </head>
 <body>
-    <div class="text-lg-center">
+    <div class="card-body">
         <h2>Results table:</h2>
-        <table>
+        <table class="table table-sm table-striped">
             <thead>
                 <tr>
                     <th>Name</th>
