--- a/WebApplication1/Views/Home/Quiz.cshtml
+++ b/WebApplication1/Views/Home/Quiz.cshtml
@@ -7,6 +7,7 @@
 <head>
     <meta name="abstract" content="width=device-width" />
     <title>Quiz</title>
+    <link rel="stylesheet" href="~/css/Style.css" />
     <link rel="stylesheet" href="/lib/bootstrap/dist/css/bootstrap.css" />
 </head>
 <body>
